// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Range > renders correct anticlockwise large 1`] = `
<g>
  <path
    d="M-47.552825814757675,-15.450849718747376 A50,50 0 1 0 47.55282581475768,-15.450849718747358L42.797543233281914,-13.905764746872622 A45,45 0 1 1 -42.79754323328191,-13.905764746872638 L-47.552825814757675,-15.450849718747376"
    style="fill: lime;"
  />
</g>
`;

exports[`Range > renders correct anticlockwise small 1`] = `
<g>
  <path
    d="M-47.552825814757675,-15.450849718747376 A50,50 0 0 0 -9.184850993605149e-15,50L-8.266365894244634e-15,45 A45,45 0 0 1 -42.79754323328191,-13.905764746872638 L-47.552825814757675,-15.450849718747376"
    style="fill: lime;"
  />
</g>
`;

exports[`Range > renders correct clockwise large 1`] = `
<g>
  <path
    d="M47.552825814757675,-15.450849718747369 A50,50 0 1 1 -47.552825814757675,-15.450849718747387L-42.79754323328191,-13.905764746872649 A45,45 0 1 0 42.79754323328191,-13.905764746872633 L47.552825814757675,-15.450849718747369"
    style="fill: lime;"
  />
</g>
`;

exports[`Range > renders correct clockwise small 1`] = `
<g>
  <path
    d="M47.552825814757675,-15.450849718747369 A50,50 0 0 1 3.061616997868383e-15,50L2.7554552980815448e-15,45 A45,45 0 0 0 42.79754323328191,-13.905764746872633 L47.552825814757675,-15.450849718747369"
    style="fill: lime;"
  />
</g>
`;
